Добавлена функция, которая по клику на элемент выводит информацию о нем

--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
-<!--<!doctype html>-->
-<!--<html ng-app="myApp">-->
-<!--<head>-->
-  <!--<meta charset="utf-8">-->
-  <!--<link rel="stylesheet" href="css/style.css">-->
-<!--</head>-->
-<!--<body>-->
-<!--<div class="app" ng-controller="itemController">-->
-  <!--<div class="sort-1">-->
-    <!--<label>Sort:-->
-      <!--<input type="checkbox" id="sort" ng-model="item" ng-change="check()">-->
-    <!--</label>-->
-    <!--<input type="text" ng-model="name" placeholder="Text filter">-->
-    <!--<ul>-->
-      <!--<li ng-repeat="item in items | orderBy:sortparam | filter:{name}">-->
-        <!--<p>Имя: {{item.name}}</p>-->
-        <!--&lt;!&ndash;<p>Свойства: {{item.flags[0]}}</p>&ndash;&gt;-->
-        <!--&lt;!&ndash;<p ng-bind="item.flags[0]"></p>&ndash;&gt;-->
-        <!--&lt;!&ndash;<p ng-bind="item.flags[1]"></p>&ndash;&gt;-->
-        <!--&lt;!&ndash;<p ng-bind="item.flags[2]"></p>&ndash;&gt;-->
-        <!--&lt;!&ndash;<p ng-bind="item.flags[3]"></p>&ndash;&gt;-->
-      <!--</li>-->
-    <!--</ul>-->
-  <!--</div>-->
-<!--</div>-->
+<!doctype html>
+<html ng-app="myApp">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<div class="app" ng-controller="itemController">
+  <div class="sort-1">
+    <label>Sort:
+      <input type="checkbox" id="sort" ng-model="item" ng-change="check()">
+    </label>
+    <input type="text" ng-model="name" placeholder="Text filter">
+    <ul>
+      <li ng-repeat="item in items | orderBy:sortparam | filter:{name}" ng-click="clickItem(item)">
+        <p>Имя: {{item.name}}</p>
+        <!--<p>Свойства: {{item.flags[0]}}</p>-->
+        <!--<p ng-bind="item.flags[0]"></p>-->
+        <!--<p ng-bind="item.flags[1]"></p>-->
+        <!--<p ng-bind="item.flags[2]"></p>-->
+        <!--<p ng-bind="item.flags[3]"></p>-->
+      </li>
+    </ul>
+  </div>
+  <div>{{msg}}</div>
+</div>
+
 <!--<div class="app" ng-controller="filterController as Ctrl">-->
   <!--<div class="sort-2">-->
     <!--Filters:-->
@@ -60,6 +62,13 @@
     <!--</ul>-->
   <!--</div>-->
 <!--</div>-->
+<script src="js/lib/angular.min.js"></script>
+<script type="text/javascript">
+  angular.module('myApp', []);
+</script>
+<script src="js/controllers/itemController.js"></script>
+</body>
+</html>
 
 <!--&lt;!&ndash;<div ng-controller="itemController">&ndash;&gt;-->
   <!--&lt;!&ndash;<p style="color: red">Название: {{item.name}}</p>&ndash;&gt;-->
@@ -70,7 +79,7 @@
 <!--&lt;!&ndash;</div>&ndash;&gt;-->
 <!--<script src="js/lib/angular.min.js"></script>-->
 <!--<script type="text/javascript">-->
-  <!--angular.module('myApp', []);-->
+<!--angular.module('myApp', []);-->
 <!--</script>-->
 <!--<script src="js/controllers/itemController.js"></script>-->
 <!--<script src="js/controllers/filterController.js"></script>-->
@@ -118,53 +127,44 @@
 <!--</div>-->
 
 
-<!doctype html>
-<html ng-app="myApp">
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<div ng-controller="WineCtrl as ctrl">
-  <h3>Categories</h3>
-  <div class="category" ng-repeat="category in ctrl.getCategories()">
-    <label>
-      <input type="checkbox" ng-model="ctrl.filterCategory[category]" />
-      {{ category }}
-    </label>
-  </div>
-  <hr />
-  <!--<div class="country" ng-repeat="country in ctrl.getCountries()">-->
-    <!--<label>-->
-      <!--<input type="checkbox" ng-model="ctrl.filterCountry[country]" />-->
-      <!--{{ country }}-->
-    <!--</label>-->
-  <!--</div>-->
-  <!--<hr />-->
-  <h3>Available Wines</h3>
-  <div ng-repeat="wine in (ctrl.wines | filter:ctrl.filterByCategory) as filteredWines">
-    {{ wine.name }} <i>({{ wine.category }})</i>
-    <b>{{ wine.country }}</b>
-  </div>
-  <hr />
-  <b>Number of results: {{ filteredWines.length }}</b>
-</div>
-<script src="js/lib/angular.min.js"></script>
-<script src="js/controllers/WineCtrl.js"></script>
-</body>
-</html>
-
 <!--<!doctype html>-->
-<!--<html ng-app="app">-->
+<!--<html ng-app="myApp">-->
 <!--<head>-->
   <!--<meta charset="utf-8">-->
   <!--<link rel="stylesheet" href="css/style.css">-->
 <!--</head>-->
-<!--<body ng-controller="Ctrl3">-->
-<!--<label ng-repeat="role in roles">-->
-  <!--<input type="checkbox" data-checklist-model="user.roles" data-checklist-value="role"> {{role.text}}-->
-<!--</label>-->
+<!--<body>-->
+<!--<div ng-controller="WineCtrl as ctrl">-->
+  <!--<h3>Categories</h3>-->
+  <!--<div class="category" ng-repeat="category in ctrl.getCategories()">-->
+    <!--<label>-->
+      <!--<input type="checkbox" ng-model="ctrl.filterCategory[category]" />-->
+      <!--{{ category }}-->
+    <!--</label>-->
+  <!--</div>-->
+  <!--<hr />-->
+  <!--&lt;!&ndash;<div class="country" ng-repeat="country in ctrl.getCountries()">&ndash;&gt;-->
+    <!--&lt;!&ndash;<label>&ndash;&gt;-->
+      <!--&lt;!&ndash;<input type="checkbox" ng-model="ctrl.filterCountry[country]" />&ndash;&gt;-->
+      <!--&lt;!&ndash;{{ country }}&ndash;&gt;-->
+    <!--&lt;!&ndash;</label>&ndash;&gt;-->
+  <!--&lt;!&ndash;</div>&ndash;&gt;-->
+  <!--&lt;!&ndash;<hr />&ndash;&gt;-->
+  <!--<h3>Available Wines</h3>-->
+  <!--<div ng-repeat="wine in (ctrl.wines | filter:ctrl.filterByCategory) as filteredWines">-->
+    <!--<div ng-click="clickWine(wine)">-->
+      <!--{{ wine.name }} <i>({{ wine.category }})</i>-->
+      <!--<b>{{ wine.country }}</b>-->
+    <!--</div>-->
+    <!--&lt;!&ndash;<div ng-show="showBlock">&ndash;&gt;-->
+      <!--&lt;!&ndash;{{ wine.name }}&ndash;&gt;-->
+    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+  <!--</div>-->
+  <!--<div>{{msg}}</div>-->
+  <!--<hr />-->
+  <!--<b>Number of results: {{ filteredWines.length }}</b>-->
+<!--</div>-->
 <!--<script src="js/lib/angular.min.js"></script>-->
-<!--<script src="js/controllers/Ctrl3.js"></script>-->
+<!--<script src="js/controllers/WineCtrl.js"></script>-->
 <!--</body>-->
 <!--</html>-->
